--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
     "@types/redux-form": "^8.3.1",
     "@typescript-eslint/parser": "^4.13.0",
     "axios": "^0.21.1",
